# agente-eda-crewai

./: README.md  app.py  pyproject.toml  requirements.txt
src/nfagent/: agent_manager.py  crew.py  main.py
src/nfagent/config/: agents.yaml  tasks.yaml
src/nfagent/tools/: data_manager.py  python_executor_tool.py
