[project]
name = "nfagent"
version = "0.1.0"
description = "nfagent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0",
    "streamlit>=1.49.1",
]

[project.scripts]
nfagent = "nfagent.main:run"
run_crew = "nfagent.main:run"
train = "nfagent.main:train"
replay = "nfagent.main:replay"
test = "nfagent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
